--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
 .App {
+  width: 100%;
+  height: 100%;
+}
+h1 {
+  font-size: 50px;
+  color: red;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.square{
+  height: 20%;
+  width: 40%;
+  margin: 5% 25%;
+  background-color: aqua;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul{
+  margin: 0%;
+  font-size: 20px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#write{
+  height: 100%;
+  width: 84%;
+  margin-left: 4%;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li{
+  border: 1px solid black;
+  margin: 0% 10% 0% 20px;
+  list-style-type: none;
+  font-size: 20px;
 }
