--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   height: 100%;
 }
 h1 {
-  font-size: 50px;
+  font-size: 90px;
   color: red;
   text-align: center;
 }
@@ -11,20 +11,27 @@ h1 {
   height: 20%;
   width: 40%;
   margin: 5% 25%;
-  background-color: aqua;
-}
-ul{
-  margin: 0%;
-  font-size: 20px;
 }
 #write{
   height: 100%;
-  width: 84%;
-  margin-left: 4%;
+  width: 90.4%;
+  margin: 0% 10% 0% 5%;
+  font-size: 40px;
+  padding-left: 9%;
 }
 li{
+  height: 100%;
+  width: 100%;
   border: 1px solid black;
-  margin: 0% 10% 0% 20px;
+  margin: 0% 10% 0% 5%;
   list-style-type: none;
-  font-size: 20px;
+  font-size: 40px;
+  word-break: break-all;
+  /* box-shadow: 5px 10px #888888; */
+  
+}
+.button{
+  width: 30px;
+  height: 30px;
+  margin-right: 3%;
 }
