--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  font-family: 'Edu VIC WA NT Beginner', cursive;
   width: 100%;
   height: 100%;
 }
@@ -11,6 +12,7 @@ h1 {
   height: 20%;
   width: 40%;
   margin: 5% 25%;
+  /* box-shadow: 5px 10px rgb(74, 70, 70); */
 }
 #write{
   height: 100%;
@@ -18,6 +20,7 @@ h1 {
   margin: 0% 10% 0% 5%;
   font-size: 40px;
   padding-left: 9%;
+  font-family: 'Edu VIC WA NT Beginner', cursive;
 }
 li{
   height: 100%;
@@ -33,4 +36,17 @@ li{
   width: 30px;
   height: 30px;
   margin-right: 3%;
+}
+.end{
+  height: 100%;
+  width: 100%;
+  margin: 0 5%;
+  border: 1px solid black;
+  font-family: 'Edu VIC WA NT Beginner', cursive;
+}
+.show{
+  margin: 1%;
+}
+span{
+  margin: 5% 15% 5% 1%;
 }
