Change style when click button.

--- a/src/App.css
+++ b/src/App.css
@@ -54,3 +54,8 @@ li{
 span{
   margin: 5% 15% 5% 1%;
 }
+
+.button-active {
+  border-color: rgba(175, 47, 47, 0.2);
+  background: rgba(175, 47, 47, 0.2);
+}
